4-platform-admin/constraint-limit-containers/test-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cubed
spec:
  selector:
    matchLabels:
      app: sleep
  replicas: 1 
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: nginx1
        image: nginx:1.14.2
        ports:
        - containerPort: 8080
      - name: nginx2
        image: nginx:1.14.2
        ports:
        - containerPort: 8081
      - name: nginx3
        image: nginx:1.14.2
        ports:
        - containerPort: 8082
