4-platform-admin/constraint-limit-containers/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLimitContainersPerPod
metadata:
  name: limit-two-containers
spec:
  parameters:
    allowedNumContainers: 2
